<resources>
    <string name="add_photo_content_description">Adding a photo to the post</string>
    <string name="app_name">FooBar</string>
    <string name="author_profile_picture_content_description">Author profile picture</string>
    <string name="close">Close Navigation</string>
    <string name="comment">Comment</string>
    <string name="display_name_hint">2–16 alphanumeric characters</string>
    <string name="display_name">Display Name</string>
    <string name="ellipsis_info">More options</string>
    <string name="enter_password">Enter your Password</string>
    <string name="enter_username">Enter your Username</string>
    <string name="foobar">FooBar</string>
    <string name="friends">Friends</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="like">Like</string>
    <string name="loginbtn">login</string>
    <string name="menu">Menu</string>
    <string name="notifications">Notifications</string>
    <string name="open">Open Navigation</string>
    <string name="password_hint">8–20 alphanumeric characters</string>
    <string name="password">Password</string>
    <string name="post_button_text">Post</string>
    <string name="post_picture_content_description">The photo the user uploads to the post</string>
    <string name="post_text">Post Text</string>
    <string name="profile_picture_must">Add a profile picture (must)</string>
    <string name="profile">Profile</string>=======
    <string name="retype_password">Retype Password</string>
    <string name="retypePassword_hint">Retype your password</string>
    <string name="share">Share</string>
    <string name="sign_in_page">Sign In page</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="sign_up">Sign Up</string>
    <string name="take_photo">Take Photo</string>
    <string name="time">Time</string>
    <string name="username_hint">5–16 alphanumeric characters</string>
    <string name="username">Username</string>
    <string name="video">Video</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="whats_on_your_mind_hint">What\'s on your mind?</string>
    <string name="BaseUrl">http://10.0.2.2:8080/</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_request_sent">Friend request sent</string>
</resources>
