<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="#FFFFFF"
        tools:context=".SignUpPageActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:background="#0F2DD6"
            android:padding="20dp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:padding="16dp"
            android:textColorHint="#636262"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="#636262"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retype_password"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/rePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/retypePassword_hint"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="#636262"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_name"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/displayNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name_hint"
            android:padding="16dp"
            android:textColorHint="#636262"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_picture_must"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/imgButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="15dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:backgroundTint="#ED0505"
            android:text="@string/take_photo"/>

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:background="#E0E0E0"
            android:contentDescription="@string/take_photo"/>

        <Button
            android:id="@+id/feedActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="15dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:backgroundTint="#0F2DD6"
            android:text="@string/sign_up"/>

        <Button
            android:id="@+id/signInActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="15dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:backgroundTint="#19551B"
            android:text="@string/sign_in_page"/>

    </LinearLayout>
</ScrollView>
