<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    style="@style/SCREEN"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="35sp"
        android:textStyle="bold"
        android:background="#5C73F4"
        android:textColor="#FFFFFF"
        android:padding="20dp"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:textColorHint="#636262"
        android:textColor="#000000"
        android:padding="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="#000000"

        android:textStyle="bold"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="#636262"
        android:textColor="#000000"
        android:padding="16dp"
        />
    <Button
        style="@style/signinbtn"
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true"/>
    <Button
        style="@style/Signupbtn"
        android:id="@+id/signUpPageActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_page"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true"/>

</LinearLayout>
