<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/commentandpost_bsckground"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/profile_imagecard"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cardCornerRadius="50dp"
            >
            <ImageView
                android:id="@+id/profile_picture_comment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/winton"
                android:background="@drawable/rounded_shape"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/author_profile_picture_content_description"/>
            >

        </androidx.cardview.widget.CardView>

        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <!-- User Information -->
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/userbar"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/user_name_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="user name" />

            <TextView
                android:id="@+id/upload_time_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/time" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ellipsis_icon_comment"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ellipsis"
            android:contentDescription="@string/ellipsis_info"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/comment_text_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:textSize="15sp"
            android:text="@string/post_text"
            style="@style/BUTTON"
            android:background="@android:color/transparent"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:layout_weight="1"

            />


        <ImageView
            android:id="@+id/comment_accept_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/send_message"
            android:layout_gravity="center_vertical"

            />
    </LinearLayout>

        <View
            style="@style/border"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="5dp"
            android:background="#D3DBDF" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/like_button_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textSize="18dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            />
        <TextView
            android:id="@+id/like_counter_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:clickable="true"
            android:textSize="18dp"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="end"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:visibility="visible"
            />
        <ImageView
            android:id="@+id/like_icon_comment"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/like_comment"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/ellipsis_info"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:visibility="invisible"
            />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>
